--- a/safety-review-frontend/index.html
+++ b/safety-review-frontend/index.html
@@ -611,7 +611,6 @@
     return new Date(y, m - 1, d, hh || 0, mm || 0).getTime();
   }
 
-  // Sort key: prefer Timestamp, fall back to sheet row (_row)
   function getCaseSortKey(c) {
     const t = parseTimestamp(c['Timestamp']);
     if (t && !Number.isNaN(t)) return t;
@@ -740,7 +739,6 @@
       const caseId = c['Case ID'] || '';
       tr.dataset.id = caseId;
 
-      // Basic info cells
       const baseCells = [
         caseId,
         c['Device system'] || '',
@@ -754,7 +752,6 @@
         tr.appendChild(td);
       });
 
-      // Status select (Assigned / In progress / Closed)
       const tdStatus = document.createElement('td');
       const statusSelect = document.createElement('select');
       statusSelect.className = 'case-status-select';
@@ -771,13 +768,12 @@
       if (currentStatus) {
         const match = statuses.find(s => s.toLowerCase() === currentStatus);
         if (match) statusSelect.value = match;
-        else statusSelect.value = c['Status']; // preserve unusual statuses
+        else statusSelect.value = c['Status'];
       }
 
       tdStatus.appendChild(statusSelect);
       tr.appendChild(tdStatus);
 
-      // Case owner (free text)
       const tdOwner = document.createElement('td');
       const ownerInput = document.createElement('input');
       ownerInput.type = 'text';
@@ -786,7 +782,6 @@
       tdOwner.appendChild(ownerInput);
       tr.appendChild(tdOwner);
 
-      // Remarks (free text)
       const tdRemarks = document.createElement('td');
       const remarksInput = document.createElement('input');
       remarksInput.type = 'text';
@@ -795,7 +790,6 @@
       tdRemarks.appendChild(remarksInput);
       tr.appendChild(tdRemarks);
 
-      // Actions
       const tdActions = document.createElement('td');
       const saveBtn = document.createElement('button');
       saveBtn.className = 'case-save-button';
@@ -834,9 +828,9 @@
     button.textContent = 'Saving…';
 
     try {
+      // IMPORTANT CHANGE: no explicit Content-Type header to avoid CORS preflight
       const res = await fetch(API_BASE_URL, {
         method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(payload)
       });
       const data = await res.json();
@@ -850,7 +844,6 @@
         allCases[idx] = Object.assign({}, allCases[idx], updated);
       }
 
-      // Re-render dashboard and AI prompt because statuses/remarks changed
       renderDashboard();
       renderAIPrompt();
 
@@ -906,7 +899,6 @@
       container.appendChild(label);
     }
 
-    // Default: select the most recent complaint
     const firstCheckbox = container.querySelector('.ai-case-checkbox');
     if (firstCheckbox) firstCheckbox.checked = true;
 
@@ -918,7 +910,6 @@
     const boxes = document.querySelectorAll('.ai-case-checkbox:checked');
     const ids = Array.from(boxes).map(b => b.value);
     if (ids.length === 0) return [];
-
     return allCases.filter(c => ids.includes(String(c['Case ID'] || '')));
   }
 
@@ -959,7 +950,6 @@
       return;
     }
 
-    // Multiple complaints
     const prompt = [
       'You are a senior safety specialist for hip replacement devices.',
       'Review the following ' + casesToUse.length + ' HipOn complaints and provide a concise multi-case safety analysis in a regulatory-friendly style.',
@@ -1084,19 +1074,16 @@
   // --- init ---
 
   document.addEventListener('DOMContentLoaded', async () => {
-    // nav clicks
     document.querySelectorAll('.nav-tab').forEach(btn => {
       btn.addEventListener('click', () => {
         showView(btn.dataset.view);
       });
     });
 
-    // filters
     document.getElementById('filter-status').addEventListener('change', renderCasesTable);
     document.getElementById('filter-device').addEventListener('change', renderCasesTable);
     document.getElementById('filter-search').addEventListener('input', renderCasesTable);
 
-    // cases table save (event delegation)
     const casesTbody = document.querySelector('#cases-table tbody');
     casesTbody.addEventListener('click', async (e) => {
       const btn = e.target.closest('.case-save-button');
@@ -1104,7 +1091,6 @@
       await saveCaseUpdate(btn);
     });
 
-    // AI: select all toggle
     document.getElementById('ai-select-all').addEventListener('change', (e) => {
       const checked = e.target.checked;
       document.querySelectorAll('.ai-case-checkbox').forEach(cb => {
@@ -1113,20 +1099,17 @@
       renderAIPrompt();
     });
 
-    // AI: re-render prompt when clicking "Generate"
     document.getElementById('ai-generate').addEventListener('click', (e) => {
       e.preventDefault();
       renderAIPrompt();
     });
 
-    // AI: whenever user manually checks/unchecks a case, update prompt
     document.getElementById('ai-case-list').addEventListener('change', (e) => {
       if (e.target.classList.contains('ai-case-checkbox')) {
         renderAIPrompt();
       }
     });
 
-    // Copy prompt
     document.getElementById('copy-prompt').addEventListener('click', async () => {
       const text = document.getElementById('julius-prompt').value;
       try {
@@ -1138,10 +1121,8 @@
       }
     });
 
-    // Trend analyze
     document.getElementById('trend-analyze').addEventListener('click', analyzeTrends);
 
-    // load data
     const loading = document.getElementById('loading');
     try {
       allCases = await fetchCases();
